# trading-dashboard

./: .dockerignore  .gitignore  CNAME  CurveSeries_Python_API.py  DOCKER_SETUP_WINDOWS.md  Dockerfile.backend  IMPROVEMENT_PLAN.md  README.md  SETUP_GUIDE.md  docker-compose.yml  index.html  nginx.conf  pyproject.toml  run.py
backend/: pyproject.toml
backend/src/trading_backend/: api.py  main.py  redis_consumer.py  sync_service.py  test_cs.py  test_kpler.py
connectors/: pyproject.toml
connectors/src/connectors/: __init__.py
connectors/src/trading_connectors/: kpler.py  redis_producer.py
connectors/src/trading_connectors/curveseries/: client.py
core/: base_connector.py  pyproject.toml
core/src/trading_core/: __init__.py  config.py  database.py  db_models.py  models.py
database/: init.sql
scripts/: init_db.py  insert_test_data.py
