[project]
name = "trading-backend"
version = "0.1.0"
description = "Trading Dashboard åç«¯ API"
requires-python = ">=3.12"
dependencies = [
    "trading-core",
    "fastapi>=0.100.0",
    "python-multipart>=0.0.7",
    "uvicorn>=0.30.0",
]

[tool.uv.sources]
trading-core = { workspace = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"