[project]
name = "trading-connectors"
version = "0.1.0"
description = "Trading Dashboard 数据源连接器"
requires-python = ">=3.12"
dependencies = [
    "trading-core",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "redis>=5.0.0",
    "websocket-client>=1.6.0",
]

[tool.uv.sources]
trading-core = { workspace = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"